# SmartPS

./: README.md  main.py  pyproject.toml
backend/: .env  README.md  main.py  pyproject.toml  user_service.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py
backend/app/core/: config.py  db.py  redis_tool.py
backend/app/crud/: user.py
backend/app/models/: __init__.py  base.py  user.py
backend/app/utils/: email.py  jwt_token.py
backend/migrations/: env.py
backend/migrations/versions/: 5ef2ff0010c5_initial_migration.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: CaptchaModal.css  CaptchaModal.tsx  Footer.css  Footer.tsx  Layout.tsx  Navbar.css  Navbar.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AgentPage.tsx  FeaturesPage.tsx  HomePage.tsx  LoginPage.tsx  PageStyles.css  PricingPage.tsx  SignUpPage.tsx
mcp/: server.py
