[project]
name = "image-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fastmcp>=2.11.3",
    "langchain>=0.3.27",
    "langchain-mcp-tools>=0.2.12",
    "langgraph>=0.6.5",
    "websockets>=15.0.1",
]
